# Python-Advanced

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
decorators/: decorators.py
docs/: TREE_EXCEPTION.md  tree_exception.py
module_01_flask/homework/: app.py
module_03_ci_culture_beginning/homework/: hw5.sh
module_04_flask/materials/: flask_post.py  flask_wtform.py  get_requests.py
module_05_processes_and_threads/: README.md
module_05_processes_and_threads/homework/: README.md
module_06_debugging_begin/practise/: created_dir.py  work_2_1.py  work_2_2.py  work_2_3.py  work_3_1.py  work_3_2.py  work_3_3.py  work_3_4.py  work_4_1.py  work_4_2.py  work_4_3.py
module_07_logging_part_2/practice/: 01_logger_object.py  02_basicConfig.py  03_declarative_config.py  conf_logger.py  custom_handler_04.py
module_08_deploy/: DEPLOY.md
module_09_docker/: Docker.md
module_09_docker/docs/: Launch Docker.md  commands.md
module_09_docker/materials/: .dockerignore  Dockerfile
module_11_multitasking/: Multitasking.md
module_11_multitasking/homework/: README.md
module_13_db2/practice/: 01_02_add_10_records_manually.py  01_03_add_books_from_file.py  02_01_island_kotlin.py  02_02_green_future.py  03_01_valentin_and_box.py  03_02_maluksa_post.py
module_14_mvc/: MVC_language template.md
module_14_mvc/homework/: forms.py  models.py  routes.py
module_16_db3/practice/: table_attribute.py
module_17_rest_api/homework/: requirements.txt
module_18_documentation/: Swagger.md
module_19_db4/: generate_practice_and_homework_db.py
module_19_db4/homework/: main.py  (+1 more)
module_21_orm_2/: README.md
module_22_celery/: README.md
module_23_cgi_server/: README.md  setup_vpn_linux.md
module_24_debugging_2/: README.md  config_prometheus.md  grafana.md
module_25_asynchronous_programming/: README.md
module_26_fastapi/: README.md
(+307 files in other folders)
