[tool.poetry]
name = "advanced-practica"
version = "0.1.0"
description = ""
authors = ["Viktor Martynov <vm-viktor@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-wtf = "^1.1.1"
email-validator = "^2.0.0.post2"
termcolor = "^2.4.0"
logging-tree = "^1.10"
gunicorn = "^23.0.0"
flask-restful = "^0.3.10"
marshmallow = "^3.24.1"
flask-restx = "^1.3.0"
flasgger = "^0.9.7.1"
apispec = "^6.8.1"
apispec-webframeworks = "^1.2.0"
flask-jsonrpc = "^3.0.1"
sqlalchemy = "^2.0.37"
celery = {extras = ["redis"], version = "^5.4.0"}
pillow = "^11.1.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
