[tool.poetry]
name = "advanced-practica"
version = "0.1.0"
description = ""
authors = ["Viktor Martynov <vm-viktor@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-wtf = "^1.1.1"
email-validator = "^2.0.0.post2"
termcolor = "^2.4.0"
logging-tree = "^1.10"
gunicorn = "^23.0.0"
flask-restful = "^0.3.10"
marshmallow = "^3.24.1"
flask-restx = "^1.3.0"
flasgger = "^0.9.7.1"
apispec = "^6.8.1"
apispec-webframeworks = "^1.2.0"
flask-jsonrpc = "^3.0.1"
sqlalchemy = "^2.0.37"
pillow = "^11.1.0"
flake8 = "^7.1.1"
flower = "^2.0.1"
celery = {extras = ["redis"], version = "^5.4.0"}
python-dotenv = "^1.0.1"
prometheus-flask-exporter = "^0.23.1"
graphviz = "^0.20.3"
aiohttp = "^3.11.13"
aiofiles = "^24.1.0"
ipykernel = "^6.29.5"
py-markdown-table = "^1.3.0"
bs4 = "^0.0.2"
fastapi = {extras = ["standard"], version = "^0.115.11"}
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
